# discogs

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  deps.py  main.py
app/models/: __init__.py  audit.py  listing.py  user.py  wishlist.py
app/routers/: api.py  auth.py  dashboard.py  results.py  settings.py  wishlist.py
app/schemas/: wishlist.py
app/services/: auth_service.py  claude_adapter.py  discogs_adapter.py  email_service.py  scanner_service.py
app/static/css/: style.css
app/static/js/: app.js
app/workers/: scheduler.py
